updates(githop-ng2): prep for initial deploy to githop.com :tada:

--- a/src/app/landing/splash/splash.component.css
+++ b/src/app/landing/splash/splash.component.css
@@ -1,7 +1,14 @@
 
 .gth-splash {
-  position: absolute;
-  height: 70%;
+  text-align: center;
+  width: calc(100vw - 108px);
+  height: 100%;
   background: black;
   color:white;
+  padding: 0 50px
+}
+
+.gth-profile {
+  width: 195px;
+  height: 195px;
 }
