--- a/src/app/landing/nav/nav.component.css
+++ b/src/app/landing/nav/nav.component.css
@@ -4,13 +4,14 @@
 }
 
 .gth-nav {
+  padding: 0 3px;
   height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background: black;
   color: #F90050;
-  font-size: 5vmax;
+  font-size: 4.8vmax;
   border-bottom: none;
 }
 
