--- a/src/app/landing/nav/nav.component.css
+++ b/src/app/landing/nav/nav.component.css
@@ -11,8 +11,26 @@
   align-items: center;
   background: black;
   color: #F90050;
-  font-size: 4.8vmax;
+  font-size: 4.8vw;
   border-bottom: none;
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .gth-nav {
+    font-size: 7.7vw;
+  }
+}
+
+@media only screen
+and (min-device-width: 480px)
+and (max-device-width: 1280px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .gth-nav {
+    font-size: 5.7vw;
+  }
 }
 
 .gth-nav__controls {
