--- a/src/app/landing/splash/splash.component.css
+++ b/src/app/landing/splash/splash.component.css
@@ -2,10 +2,11 @@
 .gth-splash {
   text-align: center;
   width: calc(100vw - 108px);
-  height: 100%;
+  height: 69.5vh;
   background: black;
   color:white;
-  padding: 0 50px
+  padding: 0 50px;
+  border-bottom: 0;
 }
 
 .gth-profile {
