--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,13 +1,25 @@
+
+
+
 <div class="gth-border gth-blog">
 
-  <div class="gth-card gth-card--blog" [routerLink]="['/blog/post', article.id]" *ngFor="let article of articles">
-    <div class="gth-card__header" [ngStyle]="setBgImage(article.image)">
-        <h1><span class="gth-card__header--text">{{article.title}}</span></h1>
+  <div *ngIf="loading">
+    <div class="gth-loading">
+      <div class="double-bounce1"></div>
+      <div class="double-bounce2"></div>
     </div>
+  </div>
 
-    <div class="gth-card__body">
-      <h4>{{article.header}}</h4>
-      <div [innerHtml]="article.para"></div>
+  <div *ngIf="!loading">
+    <div class="gth-card gth-card--blog" [routerLink]="['/blog/post', article.id]" *ngFor="let article of articles">
+      <div class="gth-card__header" [ngStyle]="setBgImage(article.image)">
+        <h1><span class="gth-card__header--text">{{article.title}}</span></h1>
+      </div>
+
+      <div class="gth-card__body">
+        <h4>{{article.header}}</h4>
+        <div [innerHtml]="article.para"></div>
+      </div>
     </div>
   </div>
 
