updates(githop-ng2): various improvements / refactorings --blogService, blogComponent, postComponent - use pipes instead of static methods for ngStyle --resume, blog - add positions to resume, published date to blog --footer - link to github

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -12,3 +12,10 @@
   position: relative;
 }
 
+.card__body--header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
