--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -4,7 +4,8 @@
   </div>
 
     <div *ngFor="let content of article?.content; let index = index">
-      <div [ngSwitch]="content.kind" class="gth-blog__content" [ngStyle]="blogService.getStyle(content.kind, article.content[index + 1]?.kind)">
+      <div [ngSwitch]="content.kind" class="gth-blog__content"
+           [ngStyle]="{kind: content.kind, nextKind: article.content[index + 1]?.kind} | postStyle">
         <img *ngSwitchCase="'Image'" [src]="content.href"/>
         <h2 *ngSwitchCase="'Header'">{{content.text}}</h2>
         <div *ngSwitchCase="'Paragraph'" [innerHtml]="content.text"></div>
