--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="gth-border gth-blog">
 
   <div *ngIf="loading">
@@ -12,12 +9,15 @@
 
   <div *ngIf="!loading">
     <div class="gth-card gth-card--blog" [routerLink]="['/blog/post', article.id]" *ngFor="let article of articles">
-      <div class="gth-card__header" [ngStyle]="setBgImage(article.image)">
+      <div class="gth-card__header" [ngStyle]="article.image | bgImage">
         <h1><span class="gth-card__header--text">{{article.title}}</span></h1>
       </div>
 
       <div class="gth-card__body">
-        <h4>{{article.header}}</h4>
+        <div class="card__body--header">
+          <h4>{{article.header}}</h4>
+          <p>{{article.date | date}}</p>
+        </div>
         <div [innerHtml]="article.para"></div>
       </div>
     </div>
