updates(resume): sticky headers css

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,7 +1,7 @@
 <div class="gth-resume gth-border">
 
   <div *ngFor="let card of cards" class="gth-card">
-    <div class="gth-card__header">
+    <div class="gth-card__header header--sticky">
       <h2>{{card.title}}</h2>
     </div>
     <div class="gth-card__body">
