--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,12 @@
   padding: 0.75em 6em;
 }
 
+.header--sticky {
+  position: sticky;
+  position: -webkit-sticky;
+  top: -1px;
+}
+
 @media only screen
 and (min-device-width: 319px)
 and (max-device-width: 480px)
