--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,30 +1,30 @@
 <div class="gth-border gth-blog">
 
-  <div *ngIf="loading">
-    <div class="gth-loading">
-      <div class="double-bounce1"></div>
-      <div class="double-bounce2"></div>
-    </div>
-  </div>
+  <!--<div *ngIf="loading">-->
+    <!--<div class="gth-loading">-->
+      <!--<div class="double-bounce1"></div>-->
+      <!--<div class="double-bounce2"></div>-->
+    <!--</div>-->
+  <!--</div>-->
 
-  <div *ngIf="!loading">
-    <div class="gth-card gth-card--blog" [routerLink]="['/blog/post', article.id]" *ngFor="let article of articles.slice(0, blogService.page)">
-      <div class="gth-card__header" [ngStyle]="article.image | bgImage">
-        <h1><span class="gth-card__header--text">{{article.title}}</span></h1>
-      </div>
+  <!--<div *ngIf="!loading">-->
+    <!--<div class="gth-card gth-card&#45;&#45;blog" [routerLink]="['/blog/post', article.id]" *ngFor="let article of articles.slice(0, blogService.page)">-->
+      <!--<div class="gth-card__header" [ngStyle]="article.image | bgImage">-->
+        <!--<h1><span class="gth-card__header&#45;&#45;text">{{article.title}}</span></h1>-->
+      <!--</div>-->
 
-      <div class="gth-card__body">
-        <div class="card__body--header">
-          <h4>{{article.header}}</h4>
-          <p>{{article.date | date}}</p>
-        </div>
-        <div [innerHtml]="article.para"></div>
-      </div>
-    </div>
+      <!--<div class="gth-card__body">-->
+        <!--<div class="card__body&#45;&#45;header">-->
+          <!--<h4>{{article.header}}</h4>-->
+          <!--<p>{{article.date | date}}</p>-->
+        <!--</div>-->
+        <!--<div [innerHtml]="article.para"></div>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div *ngIf="blogService.page < articles.length" class="gth-card__controls">
-      <button (click)="blogService.showMore()">show more</button>
-    </div>
-  </div>
+    <!--<div *ngIf="blogService.page < articles.length" class="gth-card__controls">-->
+      <!--<button (click)="blogService.showMore()">show more</button>-->
+    <!--</div>-->
+  <!--</div>-->
 
 </div>
